# IT-School-Admin

./: .flake8  .gitignore  2Do.txt  LICENSE  Prerequisites.md  README.md  key.key
Ansible/: .~lock.Ansibel.odt#  Ansibel.odt  Ansible-UseCase.graphml  README.md
Ansible/Linux/: PyWinRM-Test.py  createCertificate.sh
Ansible/Playbooks/: gimp.yml
Ansible/Win/: setAuthentication.ps1
Ansible/playbooks/: chocolaty.yml  coder-package.yml  output.txt  test-gimp.yml  test.yml  testPythonScript.yml
Backup/: restore_Rechte.pl  samba_backup
Backup-Tools/MySQL-Backup/: README.md  config.yaml
Backup-Tools/Restic-Backup/: README.md  backup.sh  otherCommands
Backup-Tools/restic/: README.md  backup.sh  backup_config.sh  exclude.txt  excludelist  include.txt
Cloning Stuff/Clonezilla/: custom-ocs-FULL-IMAGE
Cloning-Stuff/: README.md
Cloning-Stuff/Clonezilla/: custom-ocs-Network
Cloning-Stuff/scripts/: RemoveApps.ps1
Cloning-Stuff/setHostname/: build.py  config.yaml  java.7z  setHostname.bat  setHostname.py  setHostname2.py  setup.py  setup_cx.py  test.bat
Cloning-Stuff/setWLAN/: .gitignore  import2WDS.bat  pyproject.toml  setWLAN.py  setup.py  setup_cx.py  test.bat
Linux/ActiveDomain-Samba4/: README.md
MySQL/: .gitignore  MySQLBackup.py  MySQLRestore.py  README.md  User.py  backup_mysql.py  config.yaml  doTheBackup.pl  mysql.cnf  mysqldump.cnf  setup.py
O365-Tools/O365-Create/: O365-Create.py  README.md  setup.py  test.bat
O365-Tools/O365-Sync/: README.md  setup.py  test.bat
O365-Tools/O365Admin/: README.md
O365-Tools/O365Create/: .gitignore  O365Create.py  README.md  output  pyproject.toml  setup.cfg  setup.py  setup_cx.py  test.bat
O365-Tools/O365Create/libs/: CSVTool.py  UserObj.py
O365-Tools/O365Create/src/: Email_Kollegen.txt  Informationen.txt  O365Create.py  Vorlage.csv  config.yaml
O365-Tools/O365Create/src/files/: EmailZugangsdaten.txt
O365-Tools/O365Create/src/libs/: CSVTool.py  GlobalConsole.py  NameTools.py  Questions.py  UserObj.py
O365-Tools/O365Sync/: .gitignore  Informationen.txt  O365Sync.py  README.md  pyproject.toml  start.bat  test.bat
O365-Tools/O365Sync/config/: vip.yaml
O365-Tools/O365Sync/libs/: AzurePS.py  CSVTool.py  Compare.py  Database.py  Questions.py  UserObj.py
O365-Tools/O365Sync/scripts/: deleteUser.ps1  dontClose.ps1  getO365Users.ps1
O365-Tools/O365Sync/scripts - Kopie/: createUser.ps1  deleteUser.ps1  deleteUserHeader.ps1  getO365Users.ps1
O365-Tools/O365Sync/src/: Informationen.txt  O365Sync.py
O365-Tools/O365Sync/src/config/: config.yaml  key.key  vip.yaml
O365-Tools/O365Sync/src/db/: database.db
O365-Tools/O365Sync/src/libs/: AzurePS.py  CSVTool.py  Compare.py  CreatePSScript.py  Database.py  Loader.py  MyConsole.py  Questions.py  UserObj.py
O365-Tools/O365Sync/src/scripts/: deleteUser.ps1  deleteUserHeader.ps1  getO365Users.ps1  tesp.py
Samba4/Backup/: backup_GPO.py  backup_Samba.py  backup_samba.py  config.yaml  restore_Rechte.pl
Samba4/DNS/: staticIP.cfg  staticIP.exp
Samba4/Usermanagement/: MySamba4-AddUser.pl  MySamba4-DelUser.pl  MySamba4-ImportExportCSV.pl  MySamba4-RenameUsers.pl  MySamba4Tools.pm
System/: 7z.sh  UserManagement.pl  clean_Up.pl  regex.cleanup
Tools/: README.md
Tools/changeWallpaper/: Auflösungen.ods  README.md  Share.odt  changeWallpaper-Backup.7z  changeWallpaper.py  config - Kopie.yaml  config.yaml  config2.yaml  config_Schule.yaml  pyproject.toml  ruamel.py  setup.cfg  setup.py  setup.pyOLD  setup_cx.py  sftp_log.txt  startWallpaperChanger.bat  test.bat
Tools/changeWallpaper/libs/: Cryptor.py  OpenCV.py  YamlRuamel.py  key.key  sftp.py
Tools/changeWallpaper/secret2/: key.key
Tools/changeWallpaper/src/: changeWallpaper.py  config.yaml  test.bat
Tools/changeWallpaper/src/libs/: sftp.py
Tools/changeWallpaper/src/secret/: key.key
Tools/restrictLocalUser/: ReadMe.md  restrictLocalUser.bat  restrictLocalUser.ps1
Usermanagement/: config.ini
VirtualBox-HyperV/: ConvertVBoxHyperV.ps1  README.md
Windows-Server/: README.md  restoreRechte.py  test.bat
docs/: MySQL.md  Samba4.md  System.md
(+216 files in other folders)
