# Usage: 
#   Normal Install: pip install -e .
#   Build: python -m build
# be sure setuptools and build are in latest version
# pip install --upgrade setuptools build

[project]
name = "O365-Sync"
version = "1.0.0"
authors = [
    {name = "Mag. Stefan Hagmann"},
]
description = "Manage O365 Accounts in school"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    # 'O365', 'msal', 'pyjwt == 1.7.1', 'requests',
    'datetime',
    'fsspec',
    'rich',
    'pandas',
    'questionary',
    'colorama',
    'pyyaml',
    'cryptography',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
ignore=migrations,test,__init__.py,ui/ui_main.py
extension-pkg-whitelist=PyQt5, cv2, numpy, PyQt6, PySide6
bad-names=foo,bar,baz,toto,tutu,tata
disable = """
    locally-disabled,
    too-many-branches,
    too-many-locals,
    invalid-name,
    singleton-comparison,
    line-too-long,
    missing-module-docstring,
    logging-not-lazy,
    pointless-string-statement,
    inconsistent-return-statements,
    no-self-use,
    missing-function-docstring,
    broad-except,
    unnecessary-lambda,
    too-many-instance-attributes,
    wrong-import-order,
    too-many-public-methods,
    no-else-return,
    too-many-statements,
    too-few-public-methods,
    too-many-arguments,
    wrong-import-position,
    attribute-defined-outside-init,
    anomalous-backslash-in-string,
    unused-wildcard-import,
    wildcard-import,
    no-member,
    bare-except
"""
    