[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "changeWallpaper"
authors = [
    {name = "Mag. Stefan Hagmann"},
]
description = "change Wallpaper inside Windows"
requires-python = ">=3.8"
keywords = ["wallpaper", "changer"]
license = {text = "GPLv3"}
dependencies = [
    'pyyaml',
    'cx_Freeze',
    'click',
    'rich',
    'cryptography',
    'opencv-python',
    'pysftp'
]
